# zguba-gov

./: AUTOUZUPELNIANIE.md  AUTOUZUPELNIANIE_EMAIL.md  DANE_GOV_PL_IMPLEMENTATION.md  DANE_GOV_PL_INTEGRATION.md  DANE_GOV_PL_SUMMARY.md  Dockerfile  FIX_GMINY.md  HARMONOGRAM_PREZENTACJI.md  LICENSE  PLAN_PREZENTACJI.md  QUICK_START.md  README.md  docker-compose.yml  go.mod  go.sum  template.json  web.go
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci.yml  cq.yml
backend/: .dockerignore  .env.example  .gitignore  API_DOCS.md  Dockerfile  README.md  add_examples.py  config.py  database.py  example_item.json  init_db.py  main.py  pyproject.toml  requirements.txt  start.sh
backend/models/: __init__.py  found_item.py
backend/routers/: __init__.py  found_items.py  metadata.py  odata.py  stats.py
backend/schemas/: __init__.py  found_item.py  found_item_dcat.py
cmd/server/: main.go
frontend/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.ts
internal/config/: config.go
internal/database/: database.go
internal/handler/: api.go  metadata.go  odata.go  pages.go
internal/model/: found_item.go
internal/municipality/: service.go
internal/odata/: parser.go
internal/repository/: found_item.go
rzeczy-znalezione/: KOLORYSTYKA_GOV_PL.md  LOKALNA_BAZA_DANYCH.md  README.md  angular.json  package-lock.json  package.json
rzeczy-znalezione/db/: baza_jst_aktualizacja_26062025.xlsx
rzeczy-znalezione/scripts/: convert-excel-to-json.js
rzeczy-znalezione/src/: index.html
rzeczy-znalezione/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts
rzeczy-znalezione/src/assets/: territorial-units.json
web/static/css/: style.css
web/templates/: index.html  layout.html
web/templates/partials/: autocomplete.html  error_modal.html  progress.html  records.html  step1.html  step2.html  (+4 more)
(+7 files in other folders)
