[project]
name = "zguba-gov-backend"
version = "1.0.0"
description = "API dla systemu zgłaszania znalezionych rzeczy"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.0",
    "aiosqlite==0.19.0",
    "email-validator==2.1.0",
]
