[project]
name = "zguba-gov-backend"
version = "1.0.0"
description = "API dla systemu zgłaszania znalezionych rzeczy"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "aiosqlite>=0.20",
    "email-validator>=2.2",
]
